projeto feito apenas mudar o css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="main">
+  <div class="user-bar">
+    <button *ngIf="adminLogado" class="btn-panel" (click)="abrirPainelAdmin()">
+      <i>Painel do Administrador</i>
+    </button>
+    <button *ngIf="usuarioLogado" class="btn-logout" (click)="logout()">
+      <i>Sair</i>
+    </button>
+  </div>
+
   <h1>Fernando Fernandes 229260 - Viccenzo Barbosa 243515</h1>
 
   <div *ngIf="usuarioLogado">
@@ -32,12 +41,52 @@
       </li>
     </ul>
   </div>
-  <div *ngIf="!usuarioLogado">
-    <input #username placeholder="nome" class="lg-text-input" />
-    <BR />
-    <input #password placeholder="senha" class="lg-text-input" />
+
+  <div *ngIf="!usuarioLogado" class="login">
+    <div class="input-container">
+      <div class="user-container">
+        <i class="ri-user-line"></i>
+      </div>
+      <input #username placeholder="Nome" class="lg-text-input with-icon" />
+    </div>
+
+    <div class="input-container">
+      <div class="password-wrapper">
+        <div class="password-icon">
+          <i class="ri-lock-line"></i>
+        </div>
+
+        <input
+          #password
+          [type]="mostrarSenha ? 'text' : 'password'"
+          placeholder="Senha"
+          class="lg-text-input with-icon"
+          (keyup.enter)="login(username.value, password.value)"
+        />
+
+        <button
+          type="button"
+          class="toggle-password"
+          (click)="mostrarSenha = !mostrarSenha"
+        >
+          <i [class]="mostrarSenha ? 'ri-eye-line' : 'ri-eye-off-line'"></i>
+        </button>
+      </div>
+    </div>
+
     <button class="btn-primary" (click)="login(username.value, password.value)">
       Login
     </button>
+    <span class="erro-validacao" *ngIf="mostrarErroCamposLogin">
+      ERRO: Preencha todos os campos.
+    </span>
+    <span class="erro-validacao" *ngIf="mostrarErroLogin">
+      ERRO: Usuário não encontrado ou senha incorreta.
+    </span>
   </div>
 </div>
+
+<app-admin-usuarios
+  *ngIf="mostrarAdminPanel"
+  (fecharModal)="mostrarAdminPanel = false"
+></app-admin-usuarios>
