--- a/src/app/admin-usuarios/admin-usuarios.component.css
+++ b/src/app/admin-usuarios/admin-usuarios.component.css
@@ -12,7 +12,7 @@
   }
   
   .modal-content {
-    background: #fdfdfd;
+    background: #115058;
     border-radius: 12px;
     padding: 2rem;
     width: 550px;
@@ -27,7 +27,7 @@
   .modal-content h2 {
     margin-bottom: 1.5rem;
     font-size: 1.6rem;
-    color: #222;
+    color: rgb(255, 255, 255);
     text-align: center;
   }
   
@@ -41,7 +41,7 @@
   .input-group h3 {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: rgb(255, 255, 255);
   }
   
   .lg-text-input {
@@ -63,7 +63,7 @@
     align-items: center;
     font-size: 0.95rem;
     gap: 0.4rem;
-    color: #444;
+    color: rgb(255, 255, 255);
   }
   
   .btn-primary {
@@ -117,8 +117,8 @@
   }
   
   .user-list li {
-    background-color: #fafafa;
-    border: 1px solid #e3e3e3;
+    background-color: #115058;
+    border: 1px solid #1c8896;
     border-radius: 8px;
     padding: 1rem;
     margin-bottom: 1rem;
@@ -149,7 +149,7 @@
   
   .input-with-icon i {
     font-size: 1.2rem;
-    color: #888;
+    color: #00e1ff;
   }
   
   .input-with-icon input {
@@ -168,7 +168,7 @@
     cursor: pointer;
     user-select: none;
     font-size: 1rem;
-    color: #444;
+    color: rgb(0, 225, 255);
     font-weight: 600;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -179,7 +179,7 @@
     -webkit-appearance: none;
     width: 22px;
     height: 22px;
-    border: 2px solid #ccc;
+    border: 2px solid rgb(0, 217, 255);
     border-radius: 6px;
     background-color: #fff;
     position: relative;
@@ -189,13 +189,13 @@
   
   /* Hover no checkbox */
   .checkbox-container input[type="checkbox"]:hover {
-    border-color: #1f2937;
+    border-color: #00e1ff;
   }
   
   /* Quando está checked */
   .checkbox-container input[type="checkbox"]:checked {
-    background-color: #1f2937;
-    border-color: #1f2937;
+    background-color: #00e1ff;
+    border-color: #00eeff;
   }
   
   /* Marca de check personalizada */
