--- a/src/app/admin-usuarios/admin-usuarios.component.html
+++ b/src/app/admin-usuarios/admin-usuarios.component.html
@@ -3,7 +3,7 @@
       <button class="btn-close" (click)="closeAdminPanel($event)">
         <i class="ri-close-fill"></i>
       </button>
-      <h2>Painel de Usuários (Admin)</h2>
+      <h2> Administradores </h2>
   
       <div class="input-group">
         <h3>Criar Novo Usuário</h3>
@@ -26,7 +26,7 @@
         </div>
         <label class="checkbox-container">
           <input type="checkbox" [(ngModel)]="novoUsuario.admin" />
-          Admin
+          Administrador
         </label>
         <button class="btn-primary" (click)="criarUsuario()">
           Criar Usuário
