--- a/src/app/admin-usuarios/admin-usuarios.component.html
+++ b/src/app/admin-usuarios/admin-usuarios.component.html
@@ -61,7 +61,7 @@
                 />
               </div>
               <label class="checkbox-container">
-                <input type="checkbox" [(ngModel)]="u.admin" /> Admin
+                <input type="checkbox" [(ngModel)]="u.admin" /> Administrador
               </label>
             </div>
   
