--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -14,15 +14,15 @@
 }
 
 .item:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  box-shadow: 0 2px 6px #fff;
   transition: all 0.2s ease-in-out;
 }
 
 .item-item input[type="checkbox"] {
   width: 1.3rem;
   height: 1.3rem;
-  accent-color: #1f2937;
+  accent-color: #00e1ff;
   cursor: pointer;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .btn {
-  background-color: #2563eb;
+  background-color: #00e1ff;
 }
 
 .btn:hover {
